# ed_robocup

./: .travis.yml  CMakeLists.txt  package.xml
ed_robocup/: CMakeLists.txt  package.xml  plugins.xml
ed_robocup/src/: gui_plugin.cpp  gui_plugin.h  map_filter.cpp  map_filter.h  map_plugin.cpp  map_plugin.h  navigator.cpp  plugin.cpp  plugin.h  visualizer.cpp  visualizer.h
ed_robocup_msgs/: CMakeLists.txt  package.xml
ed_robocup_msgs/msg/: NamedImage.msg
src/: navigator.cpp  navigator.h  plugin.cpp  plugin.h  segmentation.cpp  segmentation.h  visualizer.cpp  visualizer.h
srv/: FitEntityInImage.srv  GetModelImages.srv  Segment.srv
