<?xml version="1.0"?>
<package>
  <name>ed_robocup</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="todo@tue.nl">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ed</build_depend>
  <run_depend>ed</run_depend>

  <build_depend>ed_sensor_integration</build_depend>
  <run_depend>ed_sensor_integration</run_depend>

  <build_depend>ed_perception</build_depend>
  <run_depend>ed_perception</run_depend>

  <build_depend>rgbd</build_depend>
  <run_depend>rgbd</run_depend>

  <build_depend>head_ref</build_depend>
  <run_depend>head_ref</run_depend>

</package>
