<?xml version="1.0"?>
<package format="2">
  <name>ed_robocup</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="todo@tue.nl">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cb_planner_msgs_srvs</depend>
  <depend>ed</depend>
  <depend>ed_sensor_integration</depend>
  <depend>ed_perception</depend>
  <depend>head_ref</depend>
  <depend>nav_msgs</depend>
  <depend>rgbd</depend>
</package>
