<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_robocup</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="todo@tue.nl">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cb_base_navigation_msgs</depend>
  <depend>ed</depend>
  <depend>ed_robocup_msgs</depend>
  <depend>ed_sensor_integration</depend>
  <depend>head_ref</depend>
  <depend>nav_msgs</depend>
  <depend>rgbd</depend>
  <depend>rgbd_msgs</depend>

</package>
